--- a/ATRIM/TP3/TP3-frequency-domain-2021sv.ipynb
+++ b/ATRIM/TP3/TP3-frequency-domain-2021sv.ipynb
@@ -421,7 +421,7 @@
     "im = im.astype(float)\n",
     "\n",
     "H, W = im.shape\n",
-    "f_denoise = np.ones((2*H, 2*W)) # à remplacer par le filtre adapté\n",
+    "f_denoise = lowpass_filter(50, (2*H, 2*W), 'gauss')\n",
     "res = apply_filter(im, f_denoise)\n",
     "\n",
     "plt.subplot(6,4,1)\n",
@@ -517,7 +517,7 @@
     "im = im.astype(float)\n",
     "\n",
     "H, W = im.shape\n",
-    "f_denoise = np.ones((2 * H, 2 * W))\n",
+    "f_denoise = lowpass_filter(22, (2*H, 2*W), 'gauss')\n",
     "res = apply_filter(im, f_denoise)\n",
     "\n",
     "plt.subplot(6,4,13)\n",
@@ -549,7 +549,7 @@
     "im = im.astype(float)\n",
     "\n",
     "H, W = im.shape\n",
-    "f_denoise = np.ones((2 * H, 2 * W))\n",
+    "f_denoise = highpass_filter(22, (2*H, 2*W), 'gauss')\n",
     "res = apply_filter(im, f_denoise)\n",
     "\n",
     "plt.subplot(6,4,17)\n",
@@ -581,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour chaque image dont nous souhaitons enlever le bruit, nous recherchons sur la transformée de Fourier les composantes responsables du bruit et nous concevons un filtre ayant pour effet d'annuler ces composantes. Nous ne sommes cependant pas parvenu à obtenir des résultats satisfaisant en pratique et nous avons alors juste conservé la structure dans code dans la cell ci-dessus."
+    "Pour chaque image dont nous souhaitons enlever le bruit, nous recherchons sur la transformée de Fourier les composantes responsables du bruit et nous concevons un filtre ayant pour effet d'annuler ces composantes. On utilise ainsi des filtres passe-bas pour les 4 premières images et un passe-haut pour enlever les ombres de la dernière image."
    ]
   },
   {
