--- a/APSTA/TP1/2021-2022-01-APSTA-feature-selection-dim-reduction-sv.ipynb
+++ b/APSTA/TP1/2021-2022-01-APSTA-feature-selection-dim-reduction-sv.ipynb
@@ -589,19 +589,53 @@
    "source": [
     "# f) \n",
     "\n",
-    "model = SelectKBest(f_classif, k=2)\n",
-    "model.fit(Xall, yall)\n",
-    "mask_f = model.get_support()\n",
+    "fig=plt.figure(figsize=(10, 5))\n",
     "\n",
-    "model = SelectKBest(mutual_info_classif, k=2)\n",
+    "model = SelectKBest(f_classif, k=\"all\")\n",
     "model.fit(Xall, yall)\n",
-    "mask_mutual = model.get_support()\n",
+    "\n",
+    "_, n_features = Xall.shape\n",
+    "\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.scatter(range(1, n_features+1), model.scores_)\n",
+    "plt.title('f')\n",
+    "plt.xlabel('Feature index')\n",
+    "plt.ylabel('Score')\n",
+    "\n",
+    "model = SelectKBest(mutual_info_classif, k=\"all\")\n",
+    "model.fit(Xall, yall)\n",
+    "\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.scatter(range(1, n_features+1), model.scores_)\n",
+    "plt.title('mutual_info')\n",
+    "plt.xlabel('Feature index')\n",
+    "plt.ylabel('Score')\n",
     "\n",
     "def getName(l, mask):\n",
     "    return [l[i] for i in range(len(l)) if mask[i]]\n",
     "\n",
-    "print('f_val', getName(new_columns_2[1:], mask_f))\n",
-    "print('mutual_info', getName(new_columns_2[1:], mask_mutual))"
+    "plt.plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On peut s'aider des deux graphiques ci-dessus pour sélectionner des features en conservant uniquement les k au score le plus élevé. On choisit alors d'éliminer les 6 features avec le score f le plus faible."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SelectKBest(f_classif, k=n_features-6)\n",
+    "model.fit(Xall, yall)\n",
+    "mask = model.get_support()\n",
+    "\n",
+    "getName(new_columns_2[1:], mask)"
    ]
   },
   {
