--- a/APSTA/TP2/2-APSTA_svm_with_caltech101_sv.ipynb
+++ b/APSTA/TP2/2-APSTA_svm_with_caltech101_sv.ipynb
@@ -7,9 +7,9 @@
    },
    "source": [
     "# 02 - Kernel methods and SVMs\n",
-    "** Ecole Centrale Nantes **\n",
+    "**Ecole Centrale Nantes**\n",
     "\n",
-    "** Diana Mateus **\n",
+    "**Diana Mateus**\n",
     "\n",
     "\n",
     "\n"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "N9W_GTkrgDyQ"
    },
@@ -72,19 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "3OJMOUCJgDyf"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['soccer_ball', 'sunflower', 'lamp', 'wrench', 'inline_skate', 'euphonium', 'car_side', 'chandelier', 'watch', 'pigeon', 'laptop', 'dolphin', 'okapi', 'electric_guitar', 'cup', 'helicopter', 'accordion', 'crab', 'metronome', 'Motorbikes', 'gramophone', 'brain', 'windsor_chair', 'dalmatian', 'wheelchair', 'water_lilly', 'stop_sign', 'crocodile_head', 'hedgehog', 'brontosaurus', 'flamingo_head', 'anchor', 'tick', 'crocodile', 'pyramid', 'Faces_easy', 'mayfly', 'ewer', 'hawksbill', 'rooster', 'BACKGROUND_Google', 'joshua_tree', 'headphone', 'scissors', 'octopus', 'stapler', 'revolver', 'llama', 'lotus', 'beaver', 'airplanes', 'bonsai', 'platypus', 'bass', 'cougar_face', 'pagoda', 'dragonfly', 'trilobite', 'garfield', 'gerenuk', 'rhino', 'cellphone', 'elephant', 'ant', 'saxophone', 'camera', 'binocular', 'yin_yang', 'sea_horse', 'Leopards', 'kangaroo', 'cougar_body', 'cannon', 'ferry', 'ceiling_fan', 'menorah', 'butterfly', 'minaret', 'Faces', 'emu', 'ketch', 'snoopy', 'starfish', 'nautilus', 'scorpion', 'umbrella', 'dollar_bill', 'pizza', 'grand_piano', 'stegosaurus', 'panda', 'crayfish', 'mandolin', 'strawberry', 'wild_cat', 'chair', 'buddha', 'lobster', 'flamingo', 'schooner', 'barrel', 'ibis']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## VERIFY LOCATION AND STORE LABEL NAMES\n",
     "\n",
@@ -130,31 +122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "id": "oqiN4dtWgDyn"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "101_ObjectCategories/snoopy\n",
-      "101_ObjectCategories/cup\n",
-      "Total number of samples 75\n",
-      "used labels ['snoopy', 'cup']\n",
-      "Size of data matrix (75, 10000)\n",
-      "clas labels [[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
-      "  1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
-      "  1. 1. 1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#build DATASET from K categories and (up to) N images from category\n",
-    "K = 2 \n",
-    "N = 40\n",
+    "K = 3 \n",
+    "N = 200\n",
     "imWidth = 100 #resize images\n",
     "imHeight = 100\n",
     "\n",
@@ -215,25 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "id": "XYSNeplggDyt"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training with 60 training samples and  15 testing samples.\n",
-      "size of train dataset (60, 10000)\n",
-      "size of test dataset (15, 10000)\n",
-      "train target vector [[1. 1. 0. 1. 0. 0. 1. 1. 0. 0. 1. 1. 1. 1. 0. 1. 0. 1. 1. 1. 0. 1. 1. 0.\n",
-      "  1. 1. 0. 1. 1. 0. 0. 0. 1. 0. 0. 1. 1. 0. 0. 1. 0. 1. 0. 0. 1. 1. 0. 0.\n",
-      "  1. 0. 0. 1. 0. 1. 0. 1. 0. 0. 0. 1.]]\n",
-      "test target vector [[0. 0. 1. 0. 1. 1. 0. 1. 0. 0. 1. 1. 1. 1. 1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Split in Train and test set with 80% - 20% rule\n",
     "\n",
@@ -264,7 +226,7 @@
     "id": "eFsTEZ75gDyx"
    },
    "source": [
-    "**d) Training and testing a SVM\n",
+    "**d)** Training and testing a SVM\n",
     "- Create an SVC model using the sklearn module, \n",
     "- train it on the train set, \n",
     "- and test it on the test set**. \n",
@@ -287,21 +249,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "id": "p90Ezm7kgDyy"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True classes [[0. 0. 1. 0. 1. 1. 0. 1. 0. 0. 1. 1. 1. 1. 1.]]\n",
-      "Predictions [0. 1. 1. 0. 1. 1. 1. 1. 0. 1. 1. 1. 1. 1. 1.]\n",
-      "There were  3 errors\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create, train and test an svm model using the sklearn SVC\n",
     "\n",
@@ -357,23 +309,21 @@
     "\n",
     "def compute_measures(Y_gt,Y_pred, positiveClass=1): #Y_gt = ground truth\n",
     "    measures = dict()\n",
-    "    Y_len = len(Y_gt)\n",
     "    \n",
     "    eps = 1e-12\n",
     "    \n",
-    "    # True positives TP\n",
-    "    TP = np.sum((Y_test.ravel()!=Y_pred))\n",
-    "        \n",
-    "    # True negatives TN\n",
-    "    TN = \n",
+    "    TP = TN = FP = FN = 0 \n",
+    "    for pred, gt in zip(Y_pred, Y_gt):\n",
+    "        if pred != positiveClass and gt != positiveClass:\n",
+    "            TN += 1\n",
+    "        elif pred == gt and gt == positiveClass:\n",
+    "            TP += 1\n",
+    "        elif pred != gt and gt == positiveClass:\n",
+    "            FN += 1\n",
+    "        else:\n",
+    "            FP += 1\n",
     "    \n",
-    "    # False positives FP\n",
-    "    FP = \n",
-    "        \n",
-    "    # False negatives FN\n",
-    "    FN = \n",
-    "\n",
-    "    print('TP ', TP, 'TN ', TN, 'FP', FP, 'FN', FN, 'Total', TP+TN+FP+FN)\n",
+    "    print('TP ', TP, 'TN ', TN, 'FP ', FP, 'FN ', FN, 'Total', TP+TN+FP+FN)\n",
     "    measures['TP'] = TP\n",
     "    measures['TN'] = TN\n",
     "    measures['FP'] = FP\n",
@@ -381,25 +331,25 @@
     "    \n",
     "    \n",
     "    # Accuracy\n",
-    "    measures['accuracy'] = \n",
+    "    measures['accuracy'] = (TP + TN) / (TP + TN + FP + FN)\n",
     "    \n",
     "    # Precision\n",
-    "    measures['precision'] = \n",
+    "    measures['precision'] = TP / (TP + FP + eps)\n",
     "        \n",
     "    # Specificity\n",
-    "    measures['specificity']=\n",
+    "    measures['specificity'] = FP / (TN + FP + eps)\n",
     "    \n",
     "    # Recall\n",
-    "    measures['recall'] = \n",
+    "    measures['recall'] = TP / (TP + FN + eps)\n",
     "    \n",
     "    # F-measure\n",
-    "    measures['f1'] = \n",
+    "    measures['f1'] = 2 * TP / (2 * TP + FP + FN + eps)\n",
     "    \n",
     "    # Negative Predictive Value\n",
-    "    measures['npv'] = \n",
+    "    measures['npv'] = TN / (TN + FN + eps)\n",
     "    \n",
     "    # False Predictive Value\n",
-    "    measures['fpr'] = \n",
+    "    measures['fpr'] = FN / (FN + TN + eps)\n",
     "    \n",
     "    print('Accuracy ', measures['accuracy'], '\\n',\n",
     "          'Precision', measures['precision'], '\\n',\n",
@@ -409,37 +359,37 @@
     "          'NPV', measures['npv'],'\\n',\n",
     "          'FPV', measures['fpr'],'\\n')\n",
     "\n",
-    "\n",
-    "    \n",
     "    return measures\n",
     "\n",
     "def micro_average(measuresList):\n",
     "    microAverage = dict()\n",
     "    eps = 1e-12\n",
     "    \n",
-    "    \n",
+    "    TP = np.sum([measures['TP'] for measures in measuresList])\n",
+    "    FP = np.sum([measures['FP'] for measures in measuresList])\n",
+    "    TN = np.sum([measures['TN'] for measures in measuresList])\n",
+    "    FN = np.sum([measures['FN'] for measures in measuresList])\n",
     "    \n",
     "    # Accuracy\n",
-    "    microAverage['accuracy'] = \n",
+    "    microAverage['accuracy'] = (TP + TN) / (TP + TN + FP + FN)\n",
     "    \n",
     "    # Precision\n",
-    "    microAverage['precision'] = \n",
+    "    microAverage['precision'] = TP / (TP + FP + eps)\n",
     "        \n",
     "    # Specificity\n",
-    "    microAverage['specificity'] = \n",
+    "    microAverage['specificity'] = TN / (TN + FP + eps)\n",
     "    \n",
     "    # Recall\n",
-    "    microAverage['recall'] = \n",
+    "    microAverage['recall'] = TP / (TP + FN + eps)\n",
     "    \n",
     "    # F-measure\n",
-    "    microAverage['f1'] = \n",
+    "    microAverage['f1'] = 2 * TP / (2 * TP + FP + FN + eps)\n",
     "    \n",
     "    # Negative Predictive Value\n",
-    "    microAverage['npv'] = \n",
+    "    microAverage['npv'] = TN / (TN + FN + eps)\n",
     "    \n",
     "    # False Predictive Value\n",
-    "    microAverage['fpr'] = \n",
-    "    \n",
+    "    microAverage['fpr'] = FN / (FN + TN + eps)\n",
     "        \n",
     "    print('Accuracy ', microAverage['accuracy'], '\\n',\n",
     "          'Precision', microAverage['precision'], '\\n',\n",
@@ -455,25 +405,25 @@
     "    macroAverage = dict()\n",
     "\n",
     "    # Accuracy\n",
-    "    macroAverage['accuracy'] = \n",
+    "    macroAverage['accuracy'] = np.average([measure['accuracy'] for measure in measuresList])\n",
     "    \n",
     "    # Precision\n",
-    "    macroAverage['precision'] = \n",
+    "    macroAverage['precision'] = np.average([measure['precision'] for measure in measuresList])\n",
     "        \n",
     "    # Specificity\n",
-    "    macroAverage['specificity']= \n",
+    "    macroAverage['specificity'] = np.average([measure['specificity'] for measure in measuresList])\n",
     "    \n",
     "    # Recall\n",
-    "    macroAverage['recall'] = \n",
+    "    macroAverage['recall'] = np.average([measure['recall'] for measure in measuresList])\n",
     "    \n",
     "    # F-measure\n",
-    "    macroAverage['f1'] = \n",
+    "    macroAverage['f1'] = np.average([measure['f1'] for measure in measuresList])\n",
     "    \n",
     "    # Negative Predictive Value\n",
-    "    macroAverage['npv'] = \n",
+    "    macroAverage['npv'] = np.average([measure['npv'] for measure in measuresList])\n",
     "    \n",
     "    # False Predictive Value\n",
-    "    macroAverage['fpr'] = \n",
+    "    macroAverage['fpr'] = np.average([measure['fpr'] for measure in measuresList])\n",
     "    \n",
     "    print('Accuracy ', macroAverage['accuracy'], '\\n',\n",
     "          'Precision', macroAverage['precision'], '\\n',\n",
@@ -483,8 +433,7 @@
     "          'NPV', macroAverage['npv'],'\\n',\n",
     "          'FPV', macroAverage['fpr'],'\\n')\n",
     "    \n",
-    "    return macroAverage\n",
-    "\n"
+    "    return macroAverage"
    ]
   },
   {
@@ -521,9 +470,16 @@
     "print('Micro-average')\n",
     "micro_average(multiclass)\n",
     "\n",
-    "\n",
     "from sklearn.metrics import classification_report #confusion_matrix, accuracy_score, precision_score, recall_score, f1_micro, f1_macro\n",
     "print(classification_report(Y_test.ravel(), Y_pred, target_names=labelNames))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On observe qu'on obtient les même résultats que ceux fournis par scikit-learn.\n",
+    "Les résultats micro-average ne sont pas affichés car ils correspondent à l'accuracy qui est-elle déjà affichée."
    ]
   },
   {
@@ -571,7 +527,19 @@
     "id": "FkhaiIapgDzJ"
    },
    "source": [
-    "** g) REPORT:**  Change the kernel and other hyperparameters of your SVC trying to optimize the F1 measure for different cases. Describe in your report the different variants of the model tried. You may want to split your dataset into train, validation and test sets this time to find the best hyperparameters. Present and discuss your findings for different hyperparameters, number of classes and numbers of images. THIS IS THE MOST IMPORTANT PART FOR THE EVALUATION. "
+    "**g) REPORT:**  Change the kernel and other hyperparameters of your SVC trying to optimize the F1 measure for different cases. Describe in your report the different variants of the model tried. You may want to split your dataset into train, validation and test sets this time to find the best hyperparameters. Present and discuss your findings for different hyperparameters, number of classes and numbers of images. THIS IS THE MOST IMPORTANT PART FOR THE EVALUATION. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Méthodologie :**\n",
+    "\n",
+    "* on choisit d'optimiser le score f1_micro, plus adapté lorsqu'on dispose d'un nombre d'exemples variants en fonction des classes\n",
+    "* On divise le dataset en 3 parties : test, validation et entrainement\n",
+    "* On commence par sélectionner le noyau. Pour ce faire, on se contente d'utiliser des hyperparamètres par défaut et de choisir le noyau au meilleur score f1_micro sur le dataset de validation\n",
+    "* On passe alors à l'optimisation des hyper-paramètres pour le(s) modèle(s) retenu(s)"
    ]
   },
   {
@@ -581,14 +549,133 @@
     "id": "TCt_nfe0qEVx"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Séparation du dataset en 3 parties : test, validation et entrainement\n",
+    "\n",
+    "Ntrain = np.rint(.8*Y.shape[0]).astype(int)\n",
+    "Ntest = Nvalid = (Y.shape[0]-Ntrain) // 2\n",
+    "print('Training with', Ntrain , 'training samples, ', Nvalid, 'validation samples and ', Ntest, 'testing samples')\n",
+    "\n",
+    "# Randomize the order of X and Y\n",
+    "X, Y = shuffle(X, Y, random_state=0)\n",
+    "\n",
+    "# Split the data and labels into training/testing sets\n",
+    "X_train = X[0:Ntrain,:]\n",
+    "Y_train = Y[0:Ntrain,:]\n",
+    "\n",
+    "X_valid = X[Ntrain:Ntrain+Nvalid,:]\n",
+    "Y_valid = Y[Ntrain:Ntrain+Nvalid,:]\n",
+    "\n",
+    "X_test = X[Ntrain+Nvalid:,:]\n",
+    "Y_test = Y[Ntrain+Nvalid:,:]\n",
+    "\n",
+    "print(\"size of train dataset\",X_train.shape)\n",
+    "print(\"size of validation dataset\",X_valid.shape)\n",
+    "print(\"size of test dataset\",X_test.shape)\n",
+    "print(\"train target vector\",Y_train.T)\n",
+    "print(\"validation target vector\",Y_valid.T)\n",
+    "print(\"test target vector\",Y_test.T)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# choix du kernel le plus prometteur\n",
+    "\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "kernels = ['linear', 'rbf', 'poly', 'sigmoid']\n",
+    "\n",
+    "for k in kernels:\n",
+    "    clf = SVC(kernel=k)\n",
+    "    clf.fit(X_train, Y_train.ravel())\n",
+    "    Y_pred = clf.predict(X_valid)\n",
+    "    print(f\"{k} kernel score: {f1_score(Y_valid, Y_pred, average='micro')}\")\n",
+    "    # print(classification_report(Y_valid.ravel(), Y_pred, target_names=labelNames))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C_values = np.logspace(-3,10,10)\n",
+    "gamma_values = np.logspace(-9,3,10)\n",
+    "\n",
+    "clfs = [SVC()] * 4\n",
+    "f1_best = [0] * 4\n",
+    "kernels = ['linear', 'rbf', 'poly', 'sigmoid']\n",
+    "for C in C_values: \n",
+    "    for gamma in gamma_values:\n",
+    "        for i in range(4):\n",
+    "            clf = SVC(kernel=kernels[i], C=C, gamma=gamma)\n",
+    "            clf.fit(X_train, Y_train.ravel())\n",
+    "            Y_pred = clf.predict(X_valid)\n",
+    "            f1 = f1_score(Y_valid, Y_pred, average='micro')\n",
+    "            if f1 > f1_best[i]:\n",
+    "                clfs[i] = clf\n",
+    "                f1_best[i] = f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('F1 MICRO SCORES:')\n",
+    "\n",
+    "for i in range(4):\n",
+    "    print(kernels[i], f1_best[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les 3 modèles permettent d'obtenir un bon score f1_micro d'environ 0.92"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(4):\n",
+    "    print(kernels[i], 'kernel results: ')\n",
+    "    clf = clfs[i]\n",
+    "    \n",
+    "    Y_pred = clf.predict(X_test)\n",
+    "    print(classification_report(Y_test.ravel(), Y_pred, target_names=labelNames, zero_division=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observations :**\n",
+    "\n",
+    "* Pour 3 classes et en utilisant toutes les images disponibles\n",
+    "    * on arrive à obtenir de bons scores sur les données de validation mais on n'obtient de bien plus mauvais scores sur les données de test.\n",
+    "    * les kernels polynomiaux, rbf et linéaires sont les plus performants. Le score f1_micro du kernel rbf est légeremen tinférieur.\n",
+    "* Pour 3 classes et en utilisant un maximum de 40 images par classes\n",
+    "    * le kernel polynomail est le plus performant en terme de score f1_micro\n",
+    "    * on obtient des scores plus élevés que pour le cas d'utilisation de toutes les images disponibles\n",
+    "    * Ces différences et le faible nombre de données nous invitent par exemple à plutôt utiliser de la validation croisée\n",
+    "* Pour 2 classes et en utilisant un maximum de 40 images par classes\n",
+    "    * le kernel sigmoid semble plus prometteur et le kernel rbf est cette fois celui au meilleur score.\n",
+    "* Pour 2 classes et en utilisant toutes les images disponibles\n",
+    "    * on obtient des scores légerement meilleurs que pour le cas précedent\n",
+    "    * les 4 kernels obtiennent tous le même score  Pour le cas à 2 classes on voit alors que le choix du kernel a moins d'importance que pour celui à 3 classes\n",
+    "* Pour 5 classes et toutes les images\n",
+    "    * on reobserve cette fois une différence entre les 4 kernels\n",
+    "    * les scores sont inférieurs à ceux précedents"
+   ]
   }
  ],
  "metadata": {
