--- a/APSTA/TP2/2-APSTA_svm_with_caltech101_sv.ipynb
+++ b/APSTA/TP2/2-APSTA_svm_with_caltech101_sv.ipynb
@@ -471,7 +471,7 @@
     "micro_average(multiclass)\n",
     "\n",
     "from sklearn.metrics import classification_report #confusion_matrix, accuracy_score, precision_score, recall_score, f1_micro, f1_macro\n",
-    "print(classification_report(Y_test.ravel(), Y_pred, target_names=labelNames))"
+    "print(classification_report(Y_test.ravel(), Y_pred, target_names=labelNames, zero_division=1))"
    ]
   },
   {
@@ -646,12 +646,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print('F1 MICRO SCORES:')\n",
+    "\n",
     "for i in range(4):\n",
-    "    print(kernels[i], 'kernel results: ')\n",
     "    clf = clfs[i]\n",
-    "    \n",
     "    Y_pred = clf.predict(X_test)\n",
-    "    print(classification_report(Y_test.ravel(), Y_pred, target_names=labelNames, zero_division=True))"
+    "    print(kernels[i], f1_score(Y_test, Y_pred, average='micro'))"
    ]
   },
   {
@@ -662,19 +662,20 @@
     "\n",
     "* Pour 3 classes et en utilisant toutes les images disponibles\n",
     "    * on arrive à obtenir de bons scores sur les données de validation mais on n'obtient de bien plus mauvais scores sur les données de test.\n",
-    "    * les kernels polynomiaux, rbf et linéaires sont les plus performants. Le score f1_micro du kernel rbf est légeremen tinférieur.\n",
-    "* Pour 3 classes et en utilisant un maximum de 40 images par classes\n",
-    "    * le kernel polynomail est le plus performant en terme de score f1_micro\n",
-    "    * on obtient des scores plus élevés que pour le cas d'utilisation de toutes les images disponibles\n",
-    "    * Ces différences et le faible nombre de données nous invitent par exemple à plutôt utiliser de la validation croisée\n",
-    "* Pour 2 classes et en utilisant un maximum de 40 images par classes\n",
-    "    * le kernel sigmoid semble plus prometteur et le kernel rbf est cette fois celui au meilleur score.\n",
+    "* Pour 3 classes et en utilisant un maximum de 20 images par classes\n",
+    "    * on obtient de moins bon scores f1_micro que précedemment, comme attendu\n",
+    "* Pour 2 classes et en utilisant un maximum de 20 images par classes\n",
+    "    * les scores des différents kernels sont plus porches les uns des autres que précedemment\n",
     "* Pour 2 classes et en utilisant toutes les images disponibles\n",
-    "    * on obtient des scores légerement meilleurs que pour le cas précedent\n",
+    "    * on obtient des scores meilleurs que pour le cas précedent\n",
     "    * les 4 kernels obtiennent tous le même score  Pour le cas à 2 classes on voit alors que le choix du kernel a moins d'importance que pour celui à 3 classes\n",
     "* Pour 5 classes et toutes les images\n",
-    "    * on reobserve cette fois une différence entre les 4 kernels\n",
-    "    * les scores sont inférieurs à ceux précedents"
+    "    * on observe à nouveau cette fois une différence entre les 4 kernels\n",
+    "    * les scores sont inférieurs à ceux précedents\n",
+    "    \n",
+    "Donc,\n",
+    "* Plus on utilise d'images, plus les scores seront élevés\n",
+    "* Plus on utilise de classes différentes, plus le problème devient compliqué et plus le cohoix des paramètres du modèle et le temps de calcul deviennent importants (plus de SVM à entrainer et nécessité de plus de données)"
    ]
   }
  ],
