--- a/APSTA/TP3/03-decision-trees-demo.ipynb
+++ b/APSTA/TP3/03-decision-trees-demo.ipynb
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(tree_clf.predict([[5, 1.5]]))\n"
+    "print(tree_clf.predict([[5, 1.5]]))"
    ]
   },
   {
